# typpy

./: .gitignore  LICENSE  README.md  index.html  package-lock.json  package.json
.github/workflows/: release.yml
src/: App.tsx  styles.css
src-tauri/: .gitignore  Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: error.rs  frontmatter.rs  gitops.rs  hugo.rs  imaging.rs  lib.rs  main.rs  repo.rs  settings.rs
src/api/: tauri.ts
src/components/: CommitDialog.tsx  Editor.tsx  FrontMatterPanel.tsx  HugoLogPanel.tsx  ImageOptionsButton.tsx  NewPostDialog.tsx  PreviewPane.tsx  Sidebar.tsx  Toasts.tsx  TopBar.tsx  Welcome.tsx
src/store/: app.ts
