[package]
name = "typpy"
version = "0.1.0"
description = "Local editor for Hugo blogs"
authors = ["Chenxiao Gao"]
edition = "2021"

[lib]
name = "typpy_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["protocol-asset"] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
image = { version = "0.25", default-features = false, features = ["jpeg", "png", "webp", "gif", "bmp", "tiff"] }
walkdir = "2"
anyhow = "1"
thiserror = "2"
tokio = { version = "1", features = ["process", "io-util", "rt-multi-thread", "macros", "sync", "time"] }

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
